# Sdominanta.net

./: .bot_instructions.md  .dockerignore  .env.example  .gitattributes  .gitignore  .txt  ALEPH_FORMULAE.tex  CODEOWNERS  CONTEXT_SEED.json  MANIFEST.in  MCP_LAUNCHER_README.md  PREDICTION.md  README.md  README_MIN.md  SSI_EMAIL.txt  SSI_QPU_CONCEPT.md  Start-McpServer.ps1  TELEMETRY_SCHEMA.json  TEST_RESULTS.md  ab_report.json  calibrate_params.py  deploy_bridge.ps1  deploy_key.ps1  env.template  gamma_q_fit.json  mcp_config_pipx.json  mcp_server.py  metrics.json  package-lock.json  package.json  params_calibrated.json  pyproject.toml  requirements.txt  run_experiment_A.py  satin_link.py  setup.py  sim_T2star_anisotropy.py  sim_T_vs_time.py  start_mcp_server.bat  telemetry_run_A.json  (+15 more)
.aura/: aura.json  aura_min.txt
.github/workflows/: post-wall-note-dispatch.yml  post-wall-note.yml  pr-validate.yml  publish-note.yml  publish-npm.yml  publish-pypi.yml  release.yml
aleph_nsp/: nsp_config.json
bridge/: cache_manager.py  config.yaml  error_handler.py  logger.py  main.py
bridge/api/: pa2ap_api.py  peers.py  wall.py
cf_worker/: README.md  wrangler.toml
cf_worker/src/: index.js
docker/: Dockerfile  docker-compose.yml  supervisord.conf
docs/: CONTEXT_SEED.json  GUIDEBOOK.md  README_FULL.md  SECURE_MESSAGING.md  STRUCTURE.md  TELEMETRY_SCHEMA.json
examples/client_patch/: client.http
logs/: sdominanta.json
mcp/: main.py
mcp/agents/: architect_agent.py  research_agent.py  security_agent.py
mcp/llm_connector/: ollama_client.py  runpod_client.py
ncp_server/: app.py  prelude.txt
nsp_local/: nsp_config.json
pa2ap/: agent.py  local_director.py
scripts/: ci_truth_score.py  create_and_sign_note.py  provision_ncp.py  publish_aizebra_note.py  repo_dispatch_wall_note.py  validate_wall_notes.py  verify_wall_signatures.py  wall_archiver.py
seed/: agents_registry.json  bootstrap.json  revocations.json  topics.json
tests/: test_bridge_api.py  test_coverage_expansion.py  test_integration_scenarios.py  test_p2p_integration.py
wall/: WALL_NOTE.schema.json  WALL_RULES.md
(+13 files in other folders)
