[project]
name = "sdominanta-mcp"
version = "0.2.1"
description = "Sdominanta.net Multi-Agent Control Plane and Pa2ap Bridge"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sdominanta.net", email = "noreply@sdominanta.net" }]
dependencies = [
  "mcp[cli]>=1.2.0",
  "jsonschema>=4.19.0",
  "PyNaCl>=1.5.0",
  "rfc8785>=0.1.1",
  "fastapi",
  "uvicorn",
  "python-multipart",
  "websockets",
  "PyYAML",
  "python-dotenv",
  "httpx",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
sdom-mcp = "mcp.main:main"
sdom-bridge = "bridge.main:app"

